# ApexMath

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
api/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/app/api/: admin_router.py  router.py  schemas.py  student_router.py  teacher_router.py
api/app/auth/: dependencies.py  router.py  security.py
api/app/core/: config.py
api/app/data/: grade5_entrance.py
api/app/db/: engine.py  models.py  seed.py
api/app/domain/: analysis_models.py  exam_registry.py  models.py  scoring.py
api/app/repositories/: session_repo.py  verification_repo.py
api/app/services/: analysis_service.py  llm_client.py  verification_service.py
api/tests/: conftest.py  test_analysis_api.py  test_analysis_service.py  test_api.py  test_exam_registry.py  test_models.py  test_scoring.py
web/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
web/src/: main.js
web/src/api/: admin.js  exam.js  index.js  student.js  teacher.js
web/src/assets/: main.css
web/src/components/charts/: KnowledgeBarChart.vue  LiteracyRadarChart.vue
web/src/composables/: useAuth.js  useStudentSession.js
web/src/layouts/: AdminLayout.vue  StudentLayout.vue  TeacherLayout.vue
web/src/router/: index.js
web/src/utils/: chartOptions.js
web/src/views/: ExamListView.vue  ExamScoringView.vue  LoginView.vue  ResultReportView.vue  VerifyCodeView.vue
(+11 files in other folders)
